--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "30.0.0"
 
     defaultConfig {
-        applicationId "mobi.thalic.personalcookbook"
+        applicationId "com.larsonapps.personalcookbook"
         multiDexEnabled true
         minSdkVersion 19
         targetSdkVersion 30
