--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,7 @@ dependencies {
     // For image placement and control
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation "com.squareup.picasso:picasso:2.71828"
     // Google play services
 //    implementation 'com.google.android.gms:play-services-ads:19.3.0'
 //    implementation 'com.google.api-client:google-api-client:1.23.0'
