--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
         // Room schema placement
         javaCompileOptions {
@@ -55,14 +55,22 @@ android {
             includeAndroidResources = true
         }
     }
+    useLibrary 'android.test.runner'
+
+    useLibrary 'android.test.base'
+    useLibrary 'android.test.mock'
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'com.android.support:support-annotations:28.0.0'
 
+    // Core library
+    androidTestImplementation 'androidx.test:core:1.3.0'
     testImplementation 'junit:junit:4.13'
     //testImplementation 'org.mockito:mockito-core:2.19.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -70,8 +78,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    // fragment dependencies
-    debugImplementation "androidx.fragment:fragment-testing:1.2.5"
+
 
     // Test helpers for room
     testImplementation "androidx.room:room-testing:2.2.5"
