--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,8 +72,10 @@ dependencies {
     // Core library
     androidTestImplementation 'androidx.test:core:1.3.0'
     testImplementation 'junit:junit:4.13'
-    //testImplementation 'org.mockito:mockito-core:2.19.0'
+//    testImplementation "org.mockito:mockito-core:2.19.0"
+//    androidTestImplementation "org.mockito:mockito-android:2.19.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
     // AndroidJUnitRunner and JUnit Rules
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test:rules:1.3.0'
