progressed on adding data to manual and edit fragments
add ingredients
add steps
add contents
add keywords

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
     <application
         android:name=".CookbookApplication"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_larson_apps"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_larson_apps_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
         <activity android:name="com.larsonapps.personalcookbook.ui.CookbookActivity">
