--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,18 +35,6 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-//    flavorDimensions "version"
-//    productFlavors {
-//        free {
-//            applicationIdSuffix ".free"
-//            versionNameSuffix "-free"
-//        }
-//        paid {
-//            applicationIdSuffix ".paid"
-//            versionNameSuffix "-paid"
-//        }
-//    }
-
     buildFeatures {
         viewBinding true
     }
@@ -73,8 +61,6 @@ dependencies {
     // Core library
     androidTestImplementation 'androidx.test:core:1.3.0'
     testImplementation 'junit:junit:4.13.1'
-//    testImplementation "org.mockito:mockito-core:2.19.0"
-//    androidTestImplementation "org.mockito:mockito-android:2.19.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
     // AndroidJUnitRunner and JUnit Rules
@@ -89,7 +75,7 @@ dependencies {
     // Espresso Dependencies
     androidTestImplementation 'androidx.test.espresso.idling:idling-concurrent:3.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
-    //androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
+
 
 
     // Room Dependencies
@@ -110,6 +96,8 @@ dependencies {
     // firebase
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
     implementation 'com.google.firebase:firebase-analytics'
+    // AdMobs
+    implementation 'com.google.android.gms:play-services-ads:19.5.0'
 //    implementation 'com.google.android.gms:play-services-ads:19.3.0'
 //    implementation 'com.google.api-client:google-api-client:1.23.0'
 //    implementation 'com.google.http-client:google-http-client-android:1.23.0'
