--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,14 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".CookbookApplication"
+        android:name="com.larsonapps.personalcookbook.CookbookApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher_larson_apps"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_larson_apps_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
-        <receiver android:name=".widget.CookbookAppWidget">
+        <receiver android:name="com.larsonapps.personalcookbook.widget.CookbookAppWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -23,12 +23,12 @@
                 android:resource="@xml/cookbook_app_widget_info" />
         </receiver>
 
-        <service android:name=".widget.StackWidgetService"
+        <service android:name="com.larsonapps.personalcookbook.widget.StackWidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS"
             android:exported="false" />
 
         <activity
-            android:name=".ui.CookbookActivity"
+            android:name="com.larsonapps.personalcookbook.ui.CookbookActivity"
             android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
